<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_promos"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_promos" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_profile" />
    </group>
</menu>